--- a/content/home.html
+++ b/content/home.html
@@ -10,6 +10,8 @@
     <h3>News</h3></p>
     <h2>Spotify page</h2>
         <p><a href="https://open.spotify.com/show/2o9sKDNPgEBzczCOUoB151?si=AUBhxoEYQIKtGFkcRjoj2w">Sore Losers Spotify</a></p>
+    <h2>About us</h2>
+        <a href="about.html">About</a>
     <!-- Be sure to check if link works -->
     
     
