--- a/content/about.html
+++ b/content/about.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>About us</h1>
-    <img src="../Images/austin skatepro copy.JPG">Skatepro T</a>
+    <img src="/Images/austin skatepro copy.JPG" alt=SkateproT width=”500″ height=”600″>
   </body>
 
 </html>
