--- a/content/about.html
+++ b/content/about.html
@@ -6,7 +6,14 @@
   </head>
   <body>
     <h1>About us</h1>
-    <img src="/Images/austin skatepro copy.JPG" alt=SkateproT width=”500″ height=”600″>
+    <img src="austin-skatepro.JPG".JPG" width="600px" height="400px">
+    <h3><a href="https://www.instagram.com/austin_mazur/">Austin Mazur</a></h3>
+    <p>Goofyfooted guy From Long Island, New York. Living in Palma de Mallorca, Spain. Whammo affiliate and supported by FTLbmx, Cult BMX, Merritt BMX and skatepro </p>
+    <img src="justin.jpg" width="400px" height="400px">
+    <h3><a href="https://www.instagram.com/jkoebele/">Justin Koebele</a></h3>
+    <p>Fellow goofyfooted shredder, from Long Island, New York living in Queens, New York. Whammo affiliate and supported by FTLbmx and Wethepeople BMX</p>
+    <p><a href="home.html">Homepage
+    </a>
   </body>
 
 </html>
